progs/cpp/20400d01-90ad-45f9-a29a-f5a32bc0318b/err.txt
progs/cpp/20400d01-90ad-45f9-a29a-f5a32bc0318b/prog.cpp:6:14: warning: missing terminating " character [enabled by default]
       cout <<";
              ^
progs/cpp/20400d01-90ad-45f9-a29a-f5a32bc0318b/prog.cpp:6:7: error: missing terminating " character
       cout <<";
       ^
progs/cpp/20400d01-90ad-45f9-a29a-f5a32bc0318b/prog.cpp: In function ‘int main()’:
progs/cpp/20400d01-90ad-45f9-a29a-f5a32bc0318b/prog.cpp:7:7: error: expected primary-expression before ‘return’
       return 0;
       ^
progs/cpp/20400d01-90ad-45f9-a29a-f5a32bc0318b/prog.cpp:7:7: error: expected ‘;’ before ‘return’
